<resources>
    <string name="app_name">BrandSlam2k17</string>

    <string name="activity_name_homescreen">3I Summit</string>
    <string name="activity_name_feedback">Feedback</string>
    <string name="activity_name_testimonial_add">Add a Testimonial</string>

    <string name="counter">Wait...</string>
    <string name="countleft">6th INDIRA BRAND SLAM</string>
    <string name="aboutus">“A brand is the perception of an entity” and what Indira Group strongly believes in is building a strong foundation for corporate interface through excellent innovative practices. As a part of the mega events that Indira hosts, we announce the 6th ‘Indira Brand Slam Summit 2017”, a premier marketing conclave on 25th September in Pune. The theme for this year’s conclave is “Purposeful Purpose”.</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="summit">WELCOME</string>
    <string name="days">Days</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="fourth_brandslam_tittle">4th Indira Brand Slam 2015</string>
    <string name="fourth_brandslam_content">Pune, 30th October 2015: Indira Group of Institutes, Pune (IGI) organised the 4th edition of annual Indira Brand Slam Summit 2015 in Pune. The theme of this year’s summit was “Business Challenges in a Disruptive Era”</string>
    <string name="fourth_brandslam_tarita">Delivering the keynote address Dr. Tarita Shankar, Chairperson, Indira Group of Institutes, said,  “A brand is the perception of an entity  and what Indira strongly believes in is building a strong foundation for corporate interface through excellent innovative practices.</string>
    <string name="fourth_brandslam_chetan">To this Prof. Chetan Wakalkar, Group Director, Indira Group of Institutes added ‘With the help of strong industry-institute interface and under the guidance of industry stalwarts, special programmes are delivered to students to bridge the gap between industry requirements and curriculum’.</string>
    <string name="action_settings">Settings</string>
    <string name="vision">To create a center of academic excellence in the field of Management and IT Education with the purpose of fulfilling the industry requirements through holistic development of the future performers, who are also good human beings, and possess the right knowledge, skill sets &amp; attitude towards their work and life.</string>
    <string name="mission">To promote a learning environment that welcomes and honors men &amp; women from diverse cultures for involving themselves in intellectual inquisitiveness, explore knowledge dimensions for future application in industry, business and life. To develop managers and entrepreneurs in the field of management and IT, who can serve as engines of national and global economic growth &amp; innovation. To foster strategic alliances with industry for research and its application. To inculcate the ethical, social and moral values in all our stakeholders which is the basis of humane social order.</string>
    <string name="feedback_text">Please provide your valuable suggestions to improve the app...</string>

    <string name="testimonial_text">Please provide your View about the Brand Slam 2017...</string>
    <string name="in_progress">This Context is still in progress</string>
    <string name="activity_name_gallery">Gallery</string>
    <string name="notifyTitle">Sample notification</string>
    <string name="activity_name_testimonial">Testimonials</string>
    <string name="activity_name_guest">Guests and Awardees</string>
    <string name="title_activity_gate_pass">GatePassActivity</string>

    <string name="activity_qrcode_title">Gate Pass</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>


</resources>
