<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/activity_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:background="@color/purple">


    <ScrollView
        android:id="@+id/scrollview_countdown"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/relativeLayout"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="93dp"
                >

                <LinearLayout
                    android:id="@+id/LinearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:background="@color/purple"
                    >

                    <TextView
                        android:id="@+id/tveventStart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="50sp"
                        android:gravity="center"
                        android:text="@string/summit"
                        android:textColor="#fff"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:visibility="gone" />
                    <LinearLayout
                        android:id="@+id/LinearLayout1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:background="@drawable/counter"
                        android:backgroundTint="@android:color/transparent"
                        android:gravity="center"
                        android:orientation="vertical"
                        >

                        <TextView
                            android:id="@+id/txtDay"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="10"
                            android:gravity="center"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@color/WHITE"
                            android:textSize="35sp"
                            android:textStyle="bold"
                            android:background="@drawable/styletimer"/>

                        <TextView
                            android:id="@+id/txt_Day"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:text="@string/days"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="@color/WHITE"
                            android:background="@color/purple"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/LinearLayout2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:background="@drawable/counter"
                        android:backgroundTint="@android:color/transparent"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/txtHour"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="10"
                            android:gravity="center"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@color/WHITE"
                            android:textSize="35sp"
                            android:textStyle="bold"
                            android:background="@drawable/styletimer"/>

                        <TextView
                            android:id="@+id/txt_Hour"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:text="@string/hours"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="@color/WHITE"
                            android:textStyle="bold"
                            android:background="@color/purple"/>
                    </LinearLayout>

                    <LinearLayout
                            android:id="@+id/LinearLayout3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"

                            android:background="@drawable/counter"
                            android:backgroundTint="@android:color/transparent"
                            android:gravity="center"
                            android:orientation="vertical"
                        >

                        <TextView
                            android:id="@+id/txtMinute"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="10"
                            android:gravity="center"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@color/WHITE"
                            android:textSize="35sp"
                            android:textStyle="bold"
                            android:background="@drawable/styletimer"/>

                        <TextView
                            android:id="@+id/txt_Minute"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:text="@string/minutes"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="@color/WHITE"
                            android:textStyle="bold"
                            android:background="@color/purple"/>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/LinearLayout4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                       android:background="@drawable/counter"
                        android:backgroundTint="@android:color/transparent"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/txtSecond"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="10"
                            android:gravity="center"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="@color/WHITE"
                            android:textSize="35sp"
                            android:background="@drawable/styletimer"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txt_Second"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:text="@string/seconds"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="@color/WHITE"
                            android:background="@color/purple"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/countleft"
                android:id="@+id/textViewheader2"
                android:textSize="35sp"
                android:textStyle="bold|italic"
                android:textColor="@color/WHITE"
                android:layout_below="@+id/relativeLayout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="82dp"/>

        </RelativeLayout>


    </ScrollView>

</RelativeLayout>
